--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,36 @@ services:
     image: wurstmeister/zookeeper
     ports:
       - "2181:2181"
-    restart: unless-stopped
-
-  kafka:
-    build: .
+  kafka1:
+    depends_on:
+      - zookeeper
+    #build: .
+    image: kafka-local
     ports:
-      - "9092"
+      - "9094:9094"
     environment:
-      DOCKER_API_VERSION: 1.22
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://192.168.99.100:9092
-      KAFKA_LISTENERS: PLAINTEXT://:9092
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka1:9092,OUTSIDE://${DOCKER_HOST_IP:-127.0.0.1}:9094
+      KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_BROKER_ID: 1
+      KAFKA_CREATE_TOPICS: "test:1:1"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      JMX_PORT: 9998
+      KAFKA_JMX_OPTS: -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=kafka1 -Dcom.sun.management.jmxremote.rmi.port=9998
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - "8089:8080"
+    depends_on:
+      - zookeeper
+      - kafka1
+    environment:
+      DYNAMIC_CONFIG_ENABLED: 'true'  # not necessary, added for tests
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka1:9092
+      KAFKA_CLUSTERS_0_METRICS_PORT: 9998
